Fixed nav bar clipping

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,6 +56,7 @@ h2 {
 .container {
   background-color: #eee;
   width: 100%;
+  margin-top: auto;
 }
 
 .wrapper {
